# buddy-benchmark

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  buddy-benchmark.cmake  command.txt  requirements.txt
benchmarks/: CMakeLists.txt
benchmarks/AudioProcessing/: BuddyBiquad.mlir  BuddyBiquadBenchmark.cpp  BuddyBiquadTest.cpp  BuddyFir.cpp  BuddyFir.mlir  BuddyFirBenchmark.cpp  BuddyIIR.mlir  BuddyIIRBenchmark.cpp  BuddyIIRTest.cpp  BuddyIir.mlir  BuddyIirBenchmark.cpp  CMakeLists.txt  KFRBiquad.cpp  KFRFft.cpp  KFRFir.cpp  KFRIir.cpp  MLIRBiquad.mlir  MLIRFir.mlir  MLIRIIR.mlir  MLIRIIRVectorization.mlir  MLIRIir.mlir  MLIRIirSimd.mlir  MLIRIirVectorization.mlir  Main.cpp  README.md
benchmarks/AudioProcessing/Operations/: CMakeLists.txt
benchmarks/DeepLearning/: CMakeLists.txt  MobileNetBenchmark.cpp  README.md
benchmarks/DeepLearning/Layers/: CMakeLists.txt  HalideConvLayerBenchmark.cpp  Main.cpp  conv_layer_generator-autoschedule.cpp  conv_layer_generator-manually.cpp  conv_layer_generator.cpp
benchmarks/DeepLearning/Models/: CMakeLists.txt
benchmarks/DeepLearning/OPs/: conv2d_nchw_filter_fchw.mlir  conv2d_nhwc_filter_hwcf.mlir  depthwise_conv2d_nhw.mlir  depthwise_conv2d_nhwc.mlir
benchmarks/DeepLearning/Ops/: CMakeLists.txt  conv2d_nchw_filter_fchw.mlir
benchmarks/DeepLearning/Vision/: README.md  vgg_19.py
benchmarks/GEMM/: CMakeLists.txt  MLIROptBenchmark.cpp  dump.sh  gemm.mlir  makefile  opt_gemm.mlir
benchmarks/Gemmini/: CMakeLists.txt  README.md  Utils.h
benchmarks/Gemmini/MiniLM-L6/: CMakeLists.txt  Main.cpp
benchmarks/Gemmini/Ops/: CMakeLists.txt
benchmarks/Gemmini/ResNet-101/: .gitattributes  CMakeLists.txt  CRunnerUtils.cpp  Main.cpp  ResNet101.mlir  main.cpp
benchmarks/ImageProcessing/: BuddyBenchmark.cpp  BuddyBottomHat2D.mlir  BuddyBottomHat2DBenchmark.cpp  BuddyClosing2D.mlir  BuddyClosing2DBenchmark.cpp  BuddyConv2D.mlir  BuddyConv2DBenchmark.cpp  BuddyCorr2D.mlir  BuddyCorr2DBenchmark.cpp  BuddyDilation2D.mlir  BuddyDilation2DBenchmark.cpp  BuddyErosion2D.mlir  BuddyErosion2DBenchmark.cpp  BuddyMorph2D.mlir  BuddyMorph2DBenchmark.cpp  BuddyMorphGrad2D.mlir  BuddyMorphGrad2DBenchmark.cpp  BuddyOpening2D.mlir  BuddyOpening2DBenchmark.cpp  BuddyResize2DBenchmark.cpp  BuddyResize4DBenchmark.cpp  BuddyRotate2DBenchmark.cpp  BuddyRotate4DBenchmark.cpp  BuddySepCorr2DBenchmark.cpp  BuddyTopHat2D.mlir  BuddyTopHat2DBenchmark.cpp  CMakeLists.txt  Conv2D.mlir  Conv2DBenchmark.cpp  Corr2D.mlir  Corr2DBenchmark.cpp  EigenConvolve2DBenchmark.cpp  Filter2DBenchmark.cpp  MLIRConv2D.mlir  MLIRConv2DBenchmark.cpp  Main.cpp  MainResize.cpp  MainRotate.cpp  OpenCVBenchmark.cpp  OpenCVBottomHat2DBenchmark.cpp  (+11 more)
benchmarks/ImageProcessing/include/: Kernels.h
benchmarks/LoopFusion/: CMakeLists.txt  MLIRfinish-fusionBenchmark.cpp  finish-fusion.mlir  main.cpp  next-attention-fusion.mlir
benchmarks/OpOptimization/: .ycm_extra_conf.py  CMakeLists.txt  dump.sh
benchmarks/OpOptimization/AffineOps/: Add2D.mlir  AffineOpsBenchmark.cpp  CMakeLists.txt  Main.cpp  Matmul2D.mlir  Reduction.mlir
benchmarks/OpOptimization/BatchNormalization/: batchNormalization_iree.py  main.py
benchmarks/OpOptimization/Conv2DNchwFchw/: CMakeLists.txt  Conv2DNchwFchw.mlir  Conv2DNchwFchw128.mlir  Conv2DNchwFchw16.mlir  Conv2DNchwFchw32.mlir  Conv2DNchwFchw64.mlir  Conv2DNchwFchw8.mlir  Conv2DNchwFchwBenchmark.cpp  Conv2DNchwFchwIm2col128.mlir  Conv2DNchwFchwIm2col16.mlir  Conv2DNchwFchwIm2col32.mlir  Conv2DNchwFchwIm2col64.mlir  Conv2DNchwFchwIm2col8.mlir  Main.cpp
benchmarks/OpOptimization/Conv2d/: CMakeLists.txt  Conv2D.mlir  Conv2DBenchmark.cpp  Conv2DRVV.mlir  Main.cpp
benchmarks/OpOptimization/Conv2dNchwFchw/: CMakeLists.txt  Conv2DNchwFchw.mlir  Conv2DNchwFchwBenchmark.cpp  Conv2DNchwFchwBroadcast.mlir  Conv2DNchwFchwIm2col.mlir  Conv2DNchwFchwIm2colTiling.mlir  Conv2DNchwFchwWinagrad.mlir  MLIROptBenchmark.cpp  Main.cpp  dump  opt_conv2d.mlir  org_conv2d.mlir
benchmarks/OpOptimization/Conv2dNhwcHwcf/: CMakeLists.txt  Conv2DNhwcHwcf.mlir  Conv2DNhwcHwcfBenchmark.cpp  Conv2DNhwcHwcfBroadcast.mlir  Main.cpp
benchmarks/OpOptimization/Conv2dOp/: CMakeLists.txt  Conv2D.mlir  Conv2DBenchmark.cpp  Conv2DRVV.mlir
benchmarks/OpOptimization/LLama/: CMakeLists.txt  LLamaBenchmark.cpp  llama_manul.mlir  llama_origin.mlir
benchmarks/OpOptimization/LinalgGeneric/: CMakeLists.txt  GenericBenchmark.cpp  Main.cpp  linalg_generic_origin.mlir  linalg_manual_opt.mlir
benchmarks/OpOptimization/MatMul/: BatchMatMul.mlir  BatchMatMulBroadcast.mlir  CMakeLists.txt  MLIROptBenchmark.cpp  (+5 more)
benchmarks/Vectorization/: CMakeLists.txt  MLIRGccLoopsEx1.mlir  MLIRGccLoopsEx10aBenchmark.cpp  MLIRGccLoopsEx10bBenchmark.cpp  MLIRGccLoopsEx11Benchmark.cpp  MLIRGccLoopsEx12.mlir  MLIRGccLoopsEx12Benchmark.cpp  MLIRGccLoopsEx13Benchmark.cpp  MLIRGccLoopsEx14Benchmark.cpp  MLIRGccLoopsEx1Benchmark.cpp  MLIRGccLoopsEx21.mlir  MLIRGccLoopsEx21Benchmark.cpp  MLIRGccLoopsEx23.mlir  MLIRGccLoopsEx23Benchmark.cpp  MLIRGccLoopsEx24.mlir  MLIRGccLoopsEx24Benchmark.cpp  MLIRGccLoopsEx25.mlir  MLIRGccLoopsEx25Benchmark.cpp  MLIRGccLoopsEx2a.mlir  MLIRGccLoopsEx2aBenchmark.cpp  MLIRGccLoopsEx2b.mlir  MLIRGccLoopsEx2bBenchmark.cpp  MLIRGccLoopsEx3Benchmark.cpp  MLIRGccLoopsEx4aBenchmark.cpp  MLIRGccLoopsEx4b.mlir  MLIRGccLoopsEx4bBenchmark.cpp  MLIRGccLoopsEx4cBenchmark.cpp  MLIRGccLoopsEx7.mlir  MLIRGccLoopsEx7Benchmark.cpp  MLIRGccLoopsEx8.mlir  MLIRGccLoopsEx8Benchmark.cpp  MLIRGccLoopsEx9Benchmark.cpp  MLIRMatMul.mlir  MLIRMatMulBenchmark.cpp  MLIRMatVec.mlir  MLIRMatVecBenchmark.cpp  MLIRSaxpy.mlir  MLIRSaxpyBenckmark.cpp  Main.cpp
benchmarks/Vicuna/: PytorchWithCpu.py  PytorchWithCuda.py  TorchDynamoWithCpu.py  TorchDynamoWithCuda.py
comparison/: CMakeLists.txt  README.md  boost_gil_conv2d.cpp  gen-conv-models.py  onnxruntime-conv2d.py  pytorch-conv2d.py  tf-conv2d.py
comparison/ImageProcessing/: boost_gil_conv2d.cpp
correctness/AudioProcessing/: BuddyFir.cpp  CMakeLists.txt  Main.cpp
validation/AudioProcessing/: AudioValidationLib.cpp  CMakeLists.txt  CWrapper.cpp
(+761 files in other folders)
